--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,30 +1,28 @@
-
 backend:
   name: git-gateway
-  branch: main
+  branch: master # Branch to update (optional; defaults to master)
 
 media_folder: "public/images/uploads"
 public_folder: "/images/uploads"
 
 collections:
-  - name: "posts"
-    label: "Blog Posts"
+  - name: "blog"
+    label: "Blog"
     folder: "content/posts"
     create: true
-    slug: "{{slug}}"
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Category", name: "category", widget: "string" }
       - { label: "Tags", name: "tags", widget: "list" }
-      - { label: "Thumbnail", name: "thumbnail", widget: "image", required: false }
+      - { label: "Thumbnail", name: "thumbnail", widget: "image", optional: true }
       - { label: "Body", name: "body", widget: "markdown" }
   - name: "pages"
     label: "Pages"
-    files:
-      - label: "About Page"
-        name: "about"
-        file: "content/pages/about.md"
-        fields:
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Body", name: "body", widget: "markdown" }
+    folder: "content/pages"
+    create: false
+    slug: "{{slug}}"
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Body", name: "body", widget: "markdown" }
