--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,28 +1,46 @@
 backend:
   name: git-gateway
-  branch: master # Branch to update (optional; defaults to master)
+  branch: master
 
-media_folder: "public/images/uploads"
-public_folder: "/images/uploads"
+media_folder: 'public/images/uploads'
+public_folder: '/images/uploads'
 
 collections:
-  - name: "blog"
-    label: "Blog"
-    folder: "content/posts"
+  - name: 'blog'
+    label: 'Blog'
+    folder: 'content/posts'
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    slug: '{{slug}}'
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Category", name: "category", widget: "string" }
-      - { label: "Tags", name: "tags", widget: "list" }
-      - { label: "Thumbnail", name: "thumbnail", widget: "image", optional: true }
-      - { label: "Body", name: "body", widget: "markdown" }
-  - name: "pages"
-    label: "Pages"
-    folder: "content/pages"
-    create: false
-    slug: "{{slug}}"
+      - {label: 'Title', name: 'title', widget: 'string'}
+      - {label: 'Publish Date', name: 'date', widget: 'datetime'}
+      - {label: 'Category', name: 'category', widget: 'relation', collection: 'categories', search_fields: ['title'], value_field: 'title', display_fields: ['title']}
+      - {label: 'Tags', name: 'tags', widget: 'relation', collection: 'tags', search_fields: ['title'], value_field: 'title', display_fields: ['title'], multiple: true}
+      - {label: 'Thumbnail', name: 'thumbnail', widget: 'image', required: false}
+      - {label: 'Body', name: 'body', widget: 'markdown'}
+  - name: 'pages'
+    label: 'Pages'
+    folder: 'content/pages'
+    create: true
+    slug: '{{slug}}'
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Body", name: "body", widget: "markdown" }
+      - {label: 'Title', name: 'title', widget: 'string'}
+      - {label: 'Body', name: 'body', widget: 'markdown'}
+  - name: 'categories'
+    label: 'Categories'
+    folder: 'content/categories'
+    create: true
+    slug: '{{slug}}'
+    identifier_field: 'title'
+    fields:
+      - {label: 'Category Name', name: 'title', widget: 'string'}
+      - {label: 'Description', name: 'description', widget: 'markdown', required: false}
+  - name: 'tags'
+    label: 'Tags'
+    folder: 'content/tags'
+    create: true
+    slug: '{{slug}}'
+    identifier_field: 'title'
+    fields:
+      - {label: 'Tag Name', name: 'title', widget: 'string'}
+      - {label: 'Description', name: 'description', widget: 'markdown', required: false}
