--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -3,53 +3,64 @@ backend:
   branch: master
 media_folder: 'public/images/uploads'
 public_folder: '/images/uploads'
+
 collections:
   - name: 'blog'
     label: 'Blog'
+    label_singular: 'Post'
     folder: 'content/posts'
     create: true
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    identifier_field: 'title'
+    summary: '{{title}}'
     fields:
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Category', name: 'category', widget: 'relation', collection: 'categories', search_fields: ['title'], value_field: 'slug', display_fields: ['title'] }
-      - { label: 'Tags', name: 'tags', widget: 'relation', collection: 'tags', search_fields: ['title'], value_field: 'slug', display_fields: ['title'], multiple: true }
-      - { label: 'Featured Image', name: 'thumbnail', widget: 'image', required: false }
-      - { label: 'Meta Title (Optional)', name: 'meta_title', widget: 'string', required: false }
-      - { label: 'Meta Description (Optional)', name: 'meta_description', widget: 'string', required: false }
-      - { label: 'Body', name: 'body', widget: 'markdown' }
+      - {label: 'Title', name: 'title', widget: 'string'}
+      - {label: 'Meta Title', name: 'meta_title', widget: 'string', required: false}
+      - {label: 'Meta Description', name: 'meta_description', widget: 'string', required: false}
+      - {label: 'Publish Date', name: 'date', widget: 'datetime'}
+      - {label: 'Category', name: 'category', widget: 'relation', collection: 'categories', search_fields: ['title'], value_field: 'title', display_fields: ['title']}
+      - {label: 'Tags', name: 'tags', widget: 'relation', collection: 'tags', search_fields: ['title'], value_field: 'title', display_fields: ['title'], multiple: true}
+      - {label: 'Featured Image', name: 'thumbnail', widget: 'image', required: false}
+      - {label: 'Body', name: 'body', widget: 'markdown'}
   - name: 'pages'
     label: 'Pages'
+    label_singular: 'Page'
     folder: 'content/pages'
     create: true
+    identifier_field: 'title'
+    summary: '{{title}}'
     fields:
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Meta Title (Optional)', name: 'meta_title', widget: 'string', required: false }
-      - { label: 'Meta Description (Optional)', name: 'meta_description', widget: 'string', required: false }
-      - { label: 'Body', name: 'body', widget: 'markdown' }
-  - name: "categories"
-    label: "Categories"
-    folder: "content/categories"
+      - {label: 'Title', name: 'title', widget: 'string'}
+      - {label: 'Meta Title', name: 'meta_title', widget: 'string', required: false}
+      - {label: 'Meta Description', name: 'meta_description', widget: 'string', required: false}
+      - {label: 'Body', name: 'body', widget: 'markdown'}
+  - name: 'categories'
+    label: 'Categories'
+    label_singular: 'Category'
+    folder: 'content/categories'
     create: true
-    slug: "{{slug}}"
-    identifier_field: "slug"
+    slug: '{{slug}}'
+    identifier_field: 'title'
+    summary: '{{title}}'
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Slug", name: "slug", widget: "string" }
-      - { label: "Meta Title (Optional)", name: "meta_title", widget: "string", required: false }
-      - { label: "Meta Description (Optional)", name: "meta_description", widget: "string", required: false }
-      - { label: "Description (Optional)", name: "description", widget: "string", required: false }
-      - { label: "Content", name: "body", widget: "markdown", required: false }
-  - name: "tags"
-    label: "Tags"
-    folder: "content/tags"
+      - {label: 'Title', name: 'title', widget: 'string'}
+      - {label: 'Slug', name: 'slug', widget: 'string'}
+      - {label: 'Meta Title', name: 'meta_title', widget: 'string', required: false}
+      - {label: 'Meta Description', name: 'meta_description', widget: 'string', required: false}
+      - {label: 'Description', name: 'description', widget: 'string', required: false}
+      - {label: 'Content', name: 'content', widget: 'markdown', required: false}
+  - name: 'tags'
+    label: 'Tags'
+    label_singular: 'Tag'
+    folder: 'content/tags'
     create: true
-    slug: "{{slug}}"
-    identifier_field: "slug"
+    slug: '{{slug}}'
+    identifier_field: 'title'
+    summary: '{{title}}'
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Slug", name: "slug", widget: "string" }
-      - { label: "Meta Title (Optional)", name: "meta_title", widget: "string", required: false }
-      - { label: "Meta Description (Optional)", name: "meta_description", widget: "string", required: false }
-      - { label: "Description (Optional)", name: "description", widget: "string", required: false }
-      - { label: "Content", name: "body", widget: "markdown", required: false }
+      - {label: 'Title', name: 'title', widget: 'string'}
+      - {label: 'Slug', name: 'slug', widget: 'string'}
+      - {label: 'Meta Title', name: 'meta_title', widget: 'string', required: false}
+      - {label: 'Meta Description', name: 'meta_description', widget: 'string', required: false}
+      - {label: 'Description', name: 'description', widget: 'string', required: false}
+      - {label: 'Content', name: 'content', widget: 'markdown', required: false}
