--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,58 +1,66 @@
 backend:
   name: git-gateway
   branch: master
-
 media_folder: "public/images/uploads"
 public_folder: "/images/uploads"
-
 collections:
   - name: "blog"
     label: "Blog"
     folder: "content/posts"
     create: true
-    slug: "{{fields.slug | default(slug)}}"
+    slug: "{{slug}}"
     fields:
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Slug", name: "slug", widget: "string", optional: true, hint: "URL-friendly identifier. If empty, it's generated from the title."}
-      - {label: "Meta Title", name: "meta_title", widget: "string", optional: true}
-      - {label: "Meta Description", name: "meta_description", widget: "textarea", optional: true}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Category", name: "category", widget: "relation", collection: "categories", search_fields: ["title"], value_field: "title", display_fields: ["title"]}
-      - {label: "Tags", name: "tags", widget: "relation", collection: "tags", search_fields: ["title"], value_field: "title", display_fields: ["title"], multiple: true}
-      - {label: "Featured Image", name: "thumbnail", widget: "image", optional: true}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Slug", name: "slug", widget: "string", required: false }
+      - { label: "Meta Title", name: "meta_title", widget: "string", required: false }
+      - { label: "Meta Description", name: "meta_description", widget: "string", required: false }
+      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - label: "Category"
+        name: "category"
+        widget: "relation"
+        collection: "categories"
+        search_fields: ["title"]
+        value_field: "title"
+        display_fields: ["title"]
+      - label: "Tags"
+        name: "tags"
+        widget: "relation"
+        collection: "tags"
+        search_fields: ["title"]
+        value_field: "title"
+        display_fields: ["title"]
+        multiple: true
+      - { label: "Featured Image", name: "thumbnail", widget: "image", required: false }
+      - { label: "Body", name: "body", widget: "markdown" }
   - name: "pages"
     label: "Pages"
     folder: "content/pages"
     create: true
-    slug: "{{fields.slug | default(slug)}}"
     fields:
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Slug", name: "slug", widget: "string", optional: true, hint: "URL-friendly identifier. If empty, it's generated from the title."}
-      - {label: "Meta Title", name: "meta_title", widget: "string", optional: true}
-      - {label: "Meta Description", name: "meta_description", widget: "textarea", optional: true}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Slug", name: "slug", widget: "string", required: false }
+      - { label: "Meta Title", name: "meta_title", widget: "string", required: false }
+      - { label: "Meta Description", name: "meta_description", widget: "string", required: false }
+      - { label: "Body", name: "body", widget: "markdown" }
   - name: "categories"
     label: "Categories"
     folder: "content/categories"
     create: true
-    slug: "{{fields.slug | default(slug)}}"
     fields:
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Slug", name: "slug", widget: "string", optional: true, hint: "URL-friendly identifier. If empty, it's generated from the title."}
-      - {label: "Meta Title", name: "meta_title", widget: "string", optional: true}
-      - {label: "Meta Description", name: "meta_description", widget: "textarea", optional: true}
-      - {label: "Description", name: "description", widget: "string", optional: true}
-      - {label: "Content", name: "content", widget: "markdown", optional: true}
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Slug", name: "slug", widget: "string", required: false }
+      - { label: "Meta Title", name: "meta_title", widget: "string", required: false }
+      - { label: "Meta Description", name: "meta_description", widget: "string", required: false }
+      - { label: "Description", name: "description", widget: "text", required: false }
+      - { label: "Content", name: "body", widget: "markdown", required: false }
   - name: "tags"
     label: "Tags"
     folder: "content/tags"
     create: true
-    slug: "{{fields.slug | default(slug)}}"
     fields:
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Slug", name: "slug", widget: "string", optional: true, hint: "URL-friendly identifier. If empty, it's generated from the title."}
-      - {label: "Meta Title", name: "meta_title", widget: "string", optional: true}
-      - {label: "Meta Description", name: "meta_description", widget: "textarea", optional: true}
-      - {label: "Description", name: "description", widget: "string", optional: true}
-      - {label: "Content", name: "content", widget: "markdown", optional: true}
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Slug", name: "slug", widget: "string", required: false }
+      - { label: "Meta Title", name: "meta_title", widget: "string", required: false }
+      - { label: "Meta Description", name: "meta_description", widget: "string", required: false }
+      - { label: "Description", name: "description", widget: "text", required: false }
+      - { label: "Content", name: "body", widget: "markdown", required: false }
