--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "decap-cms-app": "3.1.2",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "^1.13.0",
     "gray-matter": "^4.0.3",
+    "html-react-parser": "^5.1.10",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
