--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -10,57 +10,56 @@ collections:
     create: true
     slug: "{{slug}}"
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Slug", name: "slug", widget: "string", required: false }
-      - { label: "Meta Title", name: "meta_title", widget: "string", required: false }
-      - { label: "Meta Description", name: "meta_description", widget: "string", required: false }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - label: "Category"
-        name: "category"
-        widget: "relation"
-        collection: "categories"
-        search_fields: ["title"]
-        value_field: "title"
-        display_fields: ["title"]
-      - label: "Tags"
-        name: "tags"
-        widget: "relation"
-        collection: "tags"
-        search_fields: ["title"]
-        value_field: "title"
-        display_fields: ["title"]
-        multiple: true
-      - { label: "Featured Image", name: "thumbnail", widget: "image", required: false }
-      - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "Título", name: "title", widget: "string" }
+      - { label: "Slug", name: "slug", widget: "string", required: false, hint: "La URL amigable. Si se deja en blanco, se genera a partir del título." }
+      - { label: "Fecha de Publicación", name: "date", widget: "datetime" }
+      - { label: "Categoría", name: "category", widget: "relation", collection: "categories", search_fields: ["title"], value_field: "title", display_fields: ["title"] }
+      - { label: "Tags", name: "tags", widget: "relation", collection: "tags", search_fields: ["title"], value_field: "title", display_fields: ["title"], multiple: true }
+      - { label: "Imagen de Miniatura", name: "thumbnail", widget: "image", required: false }
+      - { label: "Meta Título (SEO)", name: "meta_title", widget: "string", required: false, hint: "Título para buscadores. Recomendado: 50-60 caracteres." }
+      - { label: "Meta Descripción (SEO)", name: "meta_description", widget: "string", required: false, hint: "Descripción para buscadores. Recomendado: 150-160 caracteres." }
+      - { label: "Cuerpo", name: "body", widget: "markdown" }
   - name: "pages"
     label: "Pages"
     folder: "content/pages"
     create: true
+    slug: "{{slug}}"
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Slug", name: "slug", widget: "string", required: false }
-      - { label: "Meta Title", name: "meta_title", widget: "string", required: false }
-      - { label: "Meta Description", name: "meta_description", widget: "string", required: false }
-      - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "Título", name: "title", widget: "string" }
+      - { label: "Slug", name: "slug", widget: "string", required: false, hint: "La URL amigable. Si se deja en blanco, se genera a partir del título." }
+      - { label: "Meta Título (SEO)", name: "meta_title", widget: "string", required: false, hint: "Título para buscadores. Recomendado: 50-60 caracteres." }
+      - { label: "Meta Descripción (SEO)", name: "meta_description", widget: "string", required: false, hint: "Descripción para buscadores. Recomendado: 150-160 caracteres." }
+      - { label: "Cuerpo", name: "body", widget: "markdown" }
   - name: "categories"
     label: "Categories"
     folder: "content/categories"
     create: true
+    slug: "{{slug}}"
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Slug", name: "slug", widget: "string", required: false }
-      - { label: "Meta Title", name: "meta_title", widget: "string", required: false }
-      - { label: "Meta Description", name: "meta_description", widget: "string", required: false }
-      - { label: "Description", name: "description", widget: "text", required: false }
-      - { label: "Content", name: "body", widget: "markdown", required: false }
+      - { label: "Título", name: "title", widget: "string" }
+      - { label: "Slug", name: "slug", widget: "string", required: false, hint: "La URL amigable. Si se deja en blanco, se genera a partir del título." }
+      - { label: "Meta Título (SEO)", name: "meta_title", widget: "string", required: false }
+      - { label: "Meta Descripción (SEO)", name: "meta_description", widget: "string", required: false }
+      - { label: "Descripción", name: "description", widget: "string", required: false, hint: "Descripción corta que aparece en la parte superior de la página de la categoría." }
+      - { label: "Contenido", name: "content", widget: "markdown", required: false, hint: "Contenido adicional que aparece debajo de la lista de posts." }
   - name: "tags"
     label: "Tags"
     folder: "content/tags"
     create: true
+    slug: "{{slug}}"
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Slug", name: "slug", widget: "string", required: false }
-      - { label: "Meta Title", name: "meta_title", widget: "string", required: false }
-      - { label: "Meta Description", name: "meta_description", widget: "string", required: false }
-      - { label: "Description", name: "description", widget: "text", required: false }
-      - { label: "Content", name: "body", widget: "markdown", required: false }
+      - { label: "Título", name: "title", widget: "string" }
+      - { label: "Slug", name: "slug", widget: "string", required: false, hint: "La URL amigable. Si se deja en blanco, se genera a partir del título." }
+      - { label: "Meta Título (SEO)", name: "meta_title", widget: "string", required: false }
+      - { label: "Meta Descripción (SEO)", name: "meta_description", widget: "string", required: false }
+      - { label: "Descripción", name: "description", widget: "string", required: false, hint: "Descripción corta que aparece en la parte superior de la página de la etiqueta." }
+      - { label: "Contenido", name: "content", widget: "markdown", required: false, hint: "Contenido adicional que aparece debajo de la lista de posts." }
+  - name: "code_snippets"
+    label: "Insertar Código"
+    folder: "content/code_snippets"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - { label: "Título", name: "title", widget: "string", hint: "Un nombre para identificar este snippet, ej: Google Tag Manager" }
+      - { label: "Código para <head>", name: "head_code", widget: "code", required: false, hint: "Pega aquí el código que debe ir en la etiqueta <head> de todas las páginas." }
+      - { label: "Código para <body>", name: "body_code", widget: "code", required: false, hint: "Pega aquí el código que debe ir justo después de la apertura de la etiqueta <body>." }
